--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 
 .square {
   /* border-radius: 1rem; */
-  background: red;
+  background: #1f3a93;
   border: none;
   font-size: 8rem;
   /* font-weight: 800; */
